# aish

./: .cursorindexingignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ai  ai.gemini  ai.gpt  aish  build.sh  gptsh  gptsh_makequery  test_ai.sh  test_aish.sh  test_architecture.sh  test_dynamic_loading.sh  test_integration.sh  test_memory.sh  test_providers.sh  test_self_improve.sh
ai/: Cargo.toml
ai/resources/: smart_preprocessor_model.json
ai/src/: clap_cli.rs  lib.rs  main.rs
ai/src/application/: ask.rs  ask_launch.rs  ask_prompt_input.rs  collab_outcome.rs  collaborative_child_goal_lifecycle.rs  collaborative_handoff.rs  collaborative_parent_context.rs  collaborative_recovery.rs  collaborative_side_agent.rs  collaborative_tool_tracking.rs  collaborative_workflow.rs  collaborative_workflow_effects.rs  collaborative_workflow_reconciler.rs  execute_human_task.rs  feature_executor.rs  history.rs  human_handoff.rs  human_task_cancel.rs  human_task_continuation.rs  human_task_coordinator.rs  human_task_recover.rs  human_task_resume.rs  human_task_status.rs  memory_cli.rs  memory_cli_context.rs  memory_cli_pack.rs  memory_command_policy.rs  memory_space.rs  memory_stub.rs  mod.rs  replay_manifest.rs  smart_preprocessor.rs  suggested_command_recall.rs  turn_cancel.rs  work_cli.rs
ai/src/domain/: ask.rs  ask_arg_order.rs  ask_invocation.rs  collab_instruction.rs  collab_outcome.rs  collaborative_handoff.rs  collaborative_workflow.rs  console_context.rs  console_hint.rs  execution_mode.rs  history.rs  human_handoff.rs  human_task_checkpoint.rs  human_task_evidence.rs  llm_profile.rs  log_tail.rs  mod.rs  output_filter.rs  output_format.rs  progress.rs  prompt_input.rs  reports.rs  request_context.rs  shell_exec_approval.rs  shell_log.rs  shell_log_resolve.rs  smart_observation_report.rs  smart_preprocessor.rs  suggested_command_recall.rs  terminal_display.rs  terminal_size.rs  tools.rs  work.rs
ai/src/plugin_memory/: api.rs  memory_cli.rs  memory_cli_pack.rs  memory_command_policy.rs  mod.rs  work_cli.rs
ai/tests/: 0054_safe_file_write_red.rs  0055_collaborative_handoff_e2e.rs  0055_collaborative_handoff_red.rs  0055_collaborative_handoff_vertical_e2e.rs  0055_collaborative_recovery.rs  0055_collaborative_regression.rs  0055_collaborative_side_agent.rs  0055_collaborative_vertical_slice.rs  0055_collaborative_workflow.rs  0055_minimal_human_handoff.rs  0056_feature_scope_governance.rs  0057_pty_process_cleanup_hardening.rs  0058_aish_doctor_diagnostics.rs  0059_collab_outcome_status.rs  0061_collab_mode_human_task_evidence.rs  0062_collab_mode_human_task_tool_red.rs  0063_human_task_suspend_checkpoint_red.rs  0064_human_task_resume_red.rs  0065_human_task_agent_continuation_red.rs  0066_human_task_recovery_hardening_red.rs  0067_recall_keybinding_tty_restore.rs  0068_task_completion_cli_opt_in.rs  0068_task_completion_phase1_red.rs  0070_task_completion_phase3_verification_red.rs  ask_integration.rs  context_cli.rs  history_cli.rs  interactive_prompt_input.rs  memory_disabled_cli.rs  normal_shell_exec_regression.rs  phase_a_cli.rs  replay_client_tool_wiring.rs  shell_exec_approval_ux.rs  shell_log_tail_max_bytes.rs  smart_feature_ask_e2e.rs  smart_feature_plan.rs  smart_observation_cli.rs  smart_preprocessor_ask_e2e.rs  suggested_command_recall.rs  tool_catalog_sync.rs  (+4 more)
ai/tests/common/: domain_work_client.rs  mod.rs
aibe/: Cargo.toml
aibe-client/: Cargo.toml
aibe-client/src/: lib.rs  transport.rs  unix_connect.rs
aibe-client/tests/: 0054_safe_file_write_red.rs  agent_turn_approval.rs  client_ping.rs  ensure_running_env.rs  ensure_running_spawn.rs  route_turn.rs
aibe-client/tests/common/: mod.rs
aibe/src/: clap_cli.rs  daemon.rs  lib.rs  main.rs
aibe/src/application/: agent_task.rs  agent_task_pack.rs  agent_task_tool.rs  agent_turn.rs  basic_memory_pack.rs  client_tool_defs.rs  completion_envelope.rs  contextual_memory_pack.rs  file_change_service.rs  llm_call_trace.rs  llm_error.rs  memory_recipe_service.rs  memory_runtime.rs  memory_service.rs  memory_subscribe_service.rs  memory_subscribe_transport.rs  mod.rs  protocol_convert.rs  request_service.rs  route_turn.rs  server.rs  task_completion.rs  tool_defs.rs  tool_round_terminator.rs
aibe/src/client/: mod.rs
aibe/src/daemon/: mod.rs  pid_file.rs  process.rs
aibe/src/domain/: agent_task.rs  agent_turn_context.rs  capability.rs  client_cwd.rs  client_tool_names.rs  contextual_memory.rs  diff_preview.rs  feature_registry.rs  file_change.rs  file_text.rs  llm_step.rs  memory_kind_registry.rs  memory_recipe.rs  memory_recipe_registry.rs  memory_resolver_policy.rs  (+11 more)
aibe/tests/: 0054_safe_file_write_red.rs  0062_collab_mode_human_task_tool.rs  0063_human_task_suspend_checkpoint_red.rs  0065_human_task_agent_continuation.rs  0068_task_completion_phase1_red.rs  0068_task_completion_vertical_e2e.rs  0069_agent_task_delegation_red.rs  0070_task_completion_phase3_verification_red.rs  agent_turn_loop.rs  agent_turn_streaming.rs  agent_turn_tools.rs  ai_ask_e2e.rs  capability.rs  client_ping.rs  contextual_memory.rs  ensure_running_env.rs  ensure_running_spawn.rs  external_commands.rs  feature_pack_boundary.rs  file_change_service.rs  gemini_llm.rs  graceful_restart.rs  llm_profiles_socket.rs  memory_disabled.rs  memory_kind_registry_filesystem.rs  memory_pack_turn_hook.rs  memory_recipe.rs  memory_subscribe.rs  openai_compatible_llm.rs  request_tool_validation.rs  route_turn.rs  shell_exec_approval_socket.rs  socket_protocol.rs  tool_approval_socket.rs  work_rpc.rs
aish/: Cargo.toml
aish/src/: collaborative_briefing.rs  collaborative_handoff_token.rs  collaborative_prompt.rs  human_shell.rs  lib.rs  main.rs
aish/tests/: 0055_collaborative_handoff_red.rs  0055_minimal_human_handoff.rs  0057_pty_process_cleanup_hardening.rs  0060_collab_mode_human_task_briefing.rs  0063_human_task_suspend_checkpoint_red.rs  0067_aish_shell_alt_period_csi.rs  0067_recall_keybinding_tty_restore.rs  exec_log.rs  session_cli.rs  shell_env_injection.rs  shell_interactive.rs
core/common/: Cargo.toml
(+922 files in other folders)
