[package]
name = "ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aibe = { path = "../aibe" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
