[package]
name = "ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["memory"]
memory = []

[dependencies]
aibe-client = { path = "../aibe-client" }
aibe-protocol = { path = "../aibe-protocol" }
anyhow = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ctrlc = "3"
rustyline = "14"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
