[package]
name = "aibe-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aibe-protocol = { path = "../aibe-protocol" }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
