[package]
name = "aibe"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["memory"]
memory = []

[dependencies]
aibe-client = { path = "../aibe-client" }
aibe-protocol = { path = "../aibe-protocol" }
aish-replay = { path = "../aish-replay" }
libc = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
ai = { path = "../ai" }
tempfile = "3"
tokio = { workspace = true }
wiremock = "0.6"
