[package]
name = "aish"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
