[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
thiserror = "1.0"
